--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "tailwindcss": "^1.9.6",
     "typescript": "^4.0.3",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^16.9.53"
+    "@types/react": "^16.9.53",
+    "@types/react-router-dom": "^5.1.6"
   }
 }
